fixed css on smaller laptop screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ body {
 
 .content-container {
   display: flex;
-  flex-grow: 1;
+  /* flex-grow: 1; */
 }
 
 .site-header {
@@ -44,7 +44,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 250px;
+  width: calc(15% - 20px);
   color: #d1d1d1;
   padding: 20px;
   flex-shrink: 0;
@@ -82,18 +82,18 @@ body {
 .main-content {
   flex-grow: 1;
   padding: 20px;
-  overflow-x: hidden;
+  overflow-x: auto;
   margin-bottom: 150px;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: calc(15% + 20px); /* Adjust based on sidebar width */
+  margin-right: calc(15% + 20px); /* Adjust based on TOC width */
+  max-width: calc(70% - 40px); /* Adjust based on sidebar and TOC width */
 }
 
 .toc {
   position: fixed;
     top: 0;
     right: 0;
-  width: 240px;
+    width: calc(15% - 20px);
   padding: 20px;
   color: #d1d1d1;
   flex-shrink: 0;
@@ -243,6 +243,8 @@ body {
 .main-content {
   width: 100%;
   max-width: 100%; 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .toc {
